--- a/travelplanner-app/src/index.css
+++ b/travelplanner-app/src/index.css
@@ -4,6 +4,9 @@
 @import "./styles/Footer.css";
 @import "./styles/Main.css";
 @import "./styles/Map.css";
+@import "./styles/Home.css";
+@import "./styles/Register.css";
+@import "./styles/Login.css";
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
