--- a/travelplanner-app/src/styles/Header.css
+++ b/travelplanner-app/src/styles/Header.css
@@ -1,22 +1,30 @@
+.App-header {
+   display: flex;
+   align-items: center;
+   justify-content: flex-start;
+   height: 70px;
+   width: 100vw;
+   color: #000;
+   background-color: #f6f6f6;
+   box-shadow: rgb(220, 220, 220) 0px 2px 10px;
+}
+
 .App-logo {
-    height: 110px;
-    margin-right: 20px;
-    margin-top: 10px;
+   pointer-events: none;
+   height: 110px;
+   margin-right: 20px;
+   margin-top: 10px;
  }
  
- 
- .App-header {
-    display: flex;
-    align-items: center;
-    height: 70px;
-    width: 100vw;
-    color: #000;
-    background-color: #f6f6f6;
-    box-shadow: rgb(220, 220, 220) 0px 2px 10px;
+ .App-title {
+   flex: 1;
+   text-align: left;
+   font-size: 20px;
+   font-weight: bold;
+   margin: -30px;
  }
- 
- .title {
-    font-size: 20px;
-    font-weight: bold;
-    margin: -30px;
+
+ .logout {
+   font-size: 20px;
+   padding-right: 20px;
  }
